fix donate banner content alignment

--- a/foundation_cms/static/scss/components/donate_banner/donate_banner.scss
+++ b/foundation_cms/static/scss/components/donate_banner/donate_banner.scss
@@ -64,6 +64,7 @@
     align-content: center;
     background: $white;
     padding: 0 1rem 1rem;
+    align-self: center;
 
     @include breakpoint(medium up) {
       padding: 0;
